frontpage slideshow fix to hide overflowing images when script has not yet started

--- a/sites/all/themes/mbworkspace/css/frontpage.css
+++ b/sites/all/themes/mbworkspace/css/frontpage.css
@@ -105,3 +105,10 @@
  {
 	margin-bottom: 3em;
  }
+
+ .view-dashboard-slideshow-view .view-content
+ {
+    overflow: hidden;
+    position: relative;
+    display: block;
+ }
